welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: ')' expected but ';' found.
if ( estSurMessage(); ""==R ) { Right();}
                    ^BDRBuggle:2: error: ';' expected but ')' found.
if ( estSurMessage(); ""==R ) { Right();}
                            ^BDRBuggle:3: error: ';' expected but ')' found.
if ( estSurMessage(); ""==L  ) {  Left();}
                             ^BDRBuggle:4: error: ';' expected but ')' found.
if ( estSurMessage(); ""==I ) {  Inverse();}
                            ^BDRBuggle:5: error: ';' expected but ')' found.
if ( estSurMessage(); ""==A) {  avance();}
                           ^BDRBuggle:6: error: ';' expected but ')' found.
if ( estSurMessage(); ""==B) {  avance();avance;}
                           ^BDRBuggle:7: error: ';' expected but ')' found.
if ( estSurMessage(); ""==C) {  avance();avance();avance();}
                           ^BDRBuggle:8: error: ';' expected but ')' found.
if ( estSurMessage(); ""==Z  ) { recule();}
                             ^BDRBuggle:9: error: ';' expected but ')' found.
if ( estSurMessage(); ""==Y) {  recule();recule;}
                           ^BDRBuggle:10: error: ';' expected but ')' found.
if ( estSurMessage(); ""==L  ) {  Left();}
                             ^